--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,24 +4,6 @@
  ______________________________________*/
 body{
 	&.page.page-id-61{
-		h3 {
-			text-transform: uppercase;
-			color: $blue-1;
-			background-color: $white;
-			position: relative;
-			display: block;
-			&::after{
-				content: "";
-				display: block;
-				width: 100%;
-				height: 5px;
-				width: 56%;
-				background-color: $blue-1;
-				position: absolute;
-				top: 40%;
-				right: 0; 
-			}
-		}
 		.content {
 			header {
 				display: none;
@@ -43,6 +25,21 @@ body{
 				img{
 					display: inline-block;
 					margin: 1em auto;
+				}
+			}
+		}
+
+		.col-md-6 {
+			h3 {
+				display: none;
+			}
+			form {
+				br{
+				display: none;
+				}
+				.form-control {
+					padding: 2em;
+					margin-bottom: .5em;	
 				}
 			}
 		}
