--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -59,7 +59,6 @@ body {
 								display: block;
 								position: relative;
 								text-decoration: none;
-								margin-left: 1em;
 								h3 {
 									color: $blue-1;
 									padding: 1em;
@@ -69,13 +68,21 @@ body {
 							}
 						}// end header
 						p {
-							padding: 0 20px;
+							padding: 20px;
 							a {
 								display: none; 
 							}
 						}
+
+						.link-info{
+							margin-left: 1.5em;
+						}
 					} //list
 				} //end caption
+				@include mobile{
+					padding: 0;
+					margin: 1em auto;
+				}
 			}//end featured new
 			//list of news
 			.feed-news {
@@ -158,14 +165,27 @@ body {
 					background-color: white;
 					padding: 2em; 
 					overflow: auto;
+					@include mobile{
+						padding: 0;
+						margin: 1em auto;
+						position: relative !important;
+					}
 					span{
 						width: 100% !important;
 						height: 100% !important;
 						margin: 0 !important;
 						top: 0 !important;
 						left: 0 !important;
+						@include mobile{
+							padding: 0;
+							position: relative !important;
+						}
 						iframe {
 							padding: 0 !important;
+							@include mobile{
+								padding: 0;
+								position: relative !important;
+							}
 						}
 					}   
 				}
@@ -201,25 +221,8 @@ body {
 		.home-services{
 			text-align: center;
 			header {
-				position: relative;
-				display: block;
-				margin: 1em auto 2em;
 				h3 {
-					text-transform: uppercase;
-					color: $blue-1;
-					background-color: $white;
 					text-align: left;
-					&::after{
-						content: "";
-						display: block;
-						width: 100%;
-						height: 5px;
-						width: 88%;
-						background-color: $blue-1;
-						position: absolute;
-						top: 40%;
-						right: 0; 
-					}
 				}
 			} //end header
 			//item
@@ -250,8 +253,14 @@ body {
 					text-align: center;
 					h3{
 						color: $blue-1;
-						padding: 1em;
+						padding: 1em; 
 					}
+				}
+
+				@include mobile{
+					width: 100%;
+					display: block;
+					margin: 1em auto;
 				}
 			}
 		}// end services
