--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -9,10 +9,12 @@ $white : #ffffff;
 $white-gr: #F1F2F2;
 $blue-1 : #018EAA;
 $blue-2 : #0D6A7E;
+$blue-3: #0F7282;
 $blue-op1 : rgba(0, 142, 171, 0.63);
 $blue-op2 : rgba(97, 218, 243, 0.63);
 $gray : #BCBEC0;
 $gray-1 : #E6E7E8;
+$gray-2 : #5d5d5d;
 $gray-3 : #F2F2F2;
 $gray-4 : #666;
 $gray-5 : #555656;
